--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-second-repo</my-></title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My second repo are success</h1>
     <h2>Thank alot for Allah</h2>
     <h3>Allah always help me</h3>
+    <p>Today i am learned,how to save a file in github.Its some deficalt.But if you know about topic.you can.</p>
 </body>
 </html>
