--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>My second repo are success</h1>
     <h2>Thank alot for Allah</h2>
-    <h3>Allah always help me</h3>
+    <h3>Allah always help me its good</h3>
     <p>Today i am learned,how to save a file in github.Its some deficalt.But if you know about topic.you can.</p>
 </body>
 </html>
