--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>Thank alot for Allah</h2>
     <h3>Allah always help me. changed to blue</h3>
     <p>Today i am learned,how to save a file in github.Its some deficalt.But if you know about topic.you can.</p>
+    <img src="irfan (2).jpg" alt="">
 </body>
 </html>
